--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
     <ul>
         <li id="twelvechar"> Contain 12 Characters</li>
-        <li id="lowercase"> Contain LowerCase Character</li>
+        <li id="lowercase"> Contain Lowercase Character</li>
         <li id="uppercase">Contain Uppercase Character</li>
         <li id="numbers"> Contain Numbers</li>
         <li id="specialchar">Contain Special Character</li>
