--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
 
     <div class="wrapper">
-        <h1>Password Validation</h1>
+        <h1>Password Validator</h1>
         <input type="text"  id="passinput">
 
   
     <ul>
-        <li id="twelvechar"> Contain 12 Characters</li>
-        <li id="lowercase"> Contain Lowercase Character</li>
-        <li id="uppercase">Contain Uppercase Character</li>
-        <li id="numbers"> Contain Numbers</li>
-        <li id="specialchar">Contain Special Character</li>
+        <h3>Password should  Contain</h3>
+        <li id="twelvechar">Contain 12 Letters</li>
+        <li id="lowercase"> Contain 1 Lowercase Character</li>
+        <li id="uppercase">Contain 1 Uppercase Character</li>
+        <li id="numbers"> Contain 1 Number (0-9)</li>
+        <li id="specialchar">Contain 1 Special Character</li>
     
     </ul>
 </div>
