--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="wrapper">
         <h1>Password Validator</h1>
-        <input type="text"  id="passinput">
+        <input type="password"  id="passinput">
 
   
     <ul>
